src/objects/Apttus_Config2__ProductAttributeValue__c.object
<CustomObject>
    <description>Represents the attribute values for a product class</description>
    <fields>
        <fullName>Apttus_Config2__BillingOffsetDays__c</fullName>
        <description>The number of days to delay the billing start date</description>
        <inlineHelpText>The number of days to delay the billing start date</inlineHelpText>
        <label>Billing Offset (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Color__c</fullName>
        <description>Product color</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsTransient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a transient record created by the application with default values. A new product attribute value is in transient state until the record is explicitly saved by the user. Workflow rules should check this field to test for false before executing so that rules are not incorrectly executed when transient product attribute values are created .</description>
        <inlineHelpText>Indicates a transient record created by the application with default values. A new product attribute value is in transient state until the record is explicitly saved by the user.</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>ID of the associated line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Product Attribute Values</relationshipLabel>
        <relationshipName>ProductAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Vendor__c</fullName>
        <description>Product Vendor</description>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Attribute Value</label>
    <nameField>
        <displayFormat>AV-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>